try out arrow & rotation

--- a/3DRotations/DirectXPage.xaml
+++ b/3DRotations/DirectXPage.xaml
@@ -7,15 +7,44 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
 
-  <SwapChainPanel x:Name="swapChainPanel">
-    <TextBlock Text="Hello from XAML!"
-               HorizontalAlignment="Right"
-               VerticalAlignment="Top"
-               FontSize="30" />
-  </SwapChainPanel>
+        <StackPanel Orientation="Vertical">
+            <Slider x:Name="zSlider"  
+                    Minimum="0" 
+                    Maximum="10"
+                    TickFrequency="2"
+                    TickPlacement="BottomRight"
+                    ValueChanged="slider2_ValueChanged" />
+            <Slider x:Name="ySlider"  
+                    Minimum="0" 
+                    Maximum="10"
+                    TickFrequency="2"
+                    TickPlacement="BottomRight"
+                    ValueChanged="slider2_ValueChanged" />
+            <Slider x:Name="xSlider"  
+                    Minimum="0" 
+                    Maximum="10"
+                    TickFrequency="2"
+                    TickPlacement="BottomRight"
+                    ValueChanged="slider2_ValueChanged"/>
+        </StackPanel>
 
-  <Page.BottomAppBar>
+        <SwapChainPanel x:Name="swapChainPanel"
+                      Grid.Column="1">
+            <TextBlock Text="Hello from XAML!"
+                       HorizontalAlignment="Right"
+                       VerticalAlignment="Top"
+                       FontSize="30" />
+        </SwapChainPanel>
+        
+    </Grid>
+
+  <!--<Page.BottomAppBar>
     <AppBar x:Name="bottomAppBar" Padding="10,0,10,0">
       <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
         <AppBarButton AutomationProperties.Name="Sample Button"
@@ -23,5 +52,5 @@
                       Click="AppBarButton_Click"/>
       </StackPanel>
     </AppBar>
-  </Page.BottomAppBar>
+  </Page.BottomAppBar>-->
 </Page>
