--- a/RotationApp/App.xaml
+++ b/RotationApp/App.xaml
@@ -2,6 +2,18 @@
     x:Class="RotationApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:RotationApp">
+    xmlns:local="using:RotationApp"
+    xmlns:winui="using:Microsoft.UI.Xaml.Controls">
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <winui:XamlControlsResources />
+            </ResourceDictionary.MergedDictionaries>
 
+            <Style x:Name="TextBoxTitle" TargetType="TextBlock">
+                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="FontWeight" Value="SemiBold"/>
+            </Style>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
