--- a/RotationApp/App.xaml
+++ b/RotationApp/App.xaml
@@ -3,16 +3,18 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RotationApp"
-    xmlns:winui="using:Microsoft.UI.Xaml.Controls">
+    xmlns:winui="using:Microsoft.UI.Xaml.Controls"
+    xmlns:themes="using:RotationApp.Themes">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <winui:XamlControlsResources />
+                <themes:Generic />
             </ResourceDictionary.MergedDictionaries>
 
             <Style x:Name="TextBlockTitle" TargetType="TextBlock">
-                <Setter Property="FontSize" Value="20"/>
-                <Setter Property="FontWeight" Value="SemiBold"/>
+                <Setter Property="FontSize" Value="20" />
+                <Setter Property="FontWeight" Value="SemiBold" />
             </Style>
         </ResourceDictionary>
     </Application.Resources>
